--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>ALLotaxonometer for all</title>
+<title>ALLotaxonometer for all: Open Source v.s. Closed Source LLMs</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 <body>
 <script type="module">
